# ffr120-project-trafficsimulation

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  simulation.py  test.py  visualizer.py
_old_files/: network_nx.py
_old_files/data_osm/: read_osm.py
data/sim_data/0.00/: route_data.csv
data/sim_data/0.01/: route_data.csv
data/sim_data/0.03/: route_data.csv
data/sim_data/0.04/: route_data.csv
data/sim_data/0.06/: route_data.csv
data/sim_data/0.08/: route_data.csv
data/sim_data/0.10/: route_data.csv
data/sim_data_old/0.02/: route_data.csv
data/sim_data_old/0.05/: route_data.csv
data/sim_data_old/0.07/: route_data.csv
data/sim_data_old/0.09/: route_data.csv
data_analysis/: completed_routes.py  congestion.py  congestion_analysis.py  data_collector.py  delay.py  number_of_vehicles.py  plot_data.py  plot_for_poster.py  plot_route_data.py  stopped_vehicles.py  vehicle_speed.py
driver_behavior/: router.py  vehicle.py
network/: intersection.py  network.py  road.py
network/data_gpkg/: create_sub_data.py  gpkg_to_json.py
network/road_data/: create_sub_data.py  gpkg_to_json.py  johanneberg.json  large.json
