[project]
name = "ffr120-project-traffic-simulation-of-gothenburg"
version = "0.1.0"
description = "Simple traffic simulation of Gothenburg road network."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "appnope==0.1.4",
    "asttokens==3.0.1",
    "certifi==2025.11.12",
    "charset-normalizer==3.4.4",
    "colorama==0.4.6",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cycler==0.12.1",
    "debugpy==1.8.17",
    "decorator==5.2.1",
    "executing==2.2.1",
    "fonttools==4.61.0",
    "geopandas==1.1.1",
    "idna==3.11",
    "ipykernel==7.1.0",
    "ipython==9.8.0",
    "ipython-pygments-lexers==1.1.1",
    "jedi==0.19.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.9.1",
    "kiwisolver==1.4.9",
    "matplotlib==3.10.7",
    "matplotlib-inline==0.2.1",
    "nest-asyncio==1.6.0",
    "networkx==3.6.1",
    "numpy==2.3.5",
    "osmnx==2.0.7",
    "packaging==25.0",
    "pandas==2.3.3",
    "parso==0.8.5",
    "pexpect==4.9.0",
    "pillow==12.0.0",
    "platformdirs==4.5.0",
    "prompt-toolkit==3.0.52",
    "psutil==7.1.3",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pyogrio==0.12.1",
    "pyparsing==3.2.5",
    "pyproj==3.7.2",
    "pyqtgraph==0.14.0",
    "pyside6==6.10.1",
    "pyside6-addons==6.10.1",
    "pyside6-essentials==6.10.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyzmq==27.1.0",
    "requests==2.32.5",
    "scipy==1.16.3",
    "shapely==2.1.2",
    "shiboken6==6.10.1",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tornado==6.5.2",
    "traitlets==5.14.3",
    "tzdata==2025.2",
    "urllib3==2.6.1",
    "wcwidth==0.2.14",
]
